# qwen_rmsnorm_fp4_fusion

./: .gitignore  README.md  requirements.txt  setup_qwen_rms_scale_swiglu.py
benchmark/: benchmark_openai_stream.py  collect_openai_outputs.py  plan_safe_tests.py
configs/: comparison_targets.yaml  qwen_small.yaml  small_nvfp4_pair.yaml  trtllm_prequant_nvfp4.yaml
csrc/qwen_rms_scale_swiglu/: CMakeLists.txt  qwen_rms_scale_swiglu_torch.cpp
csrc/qwen_rms_scale_swiglu/kernel/: qwenRmsScaleSwigluKernel.cu  qwenRmsScaleSwigluKernel.h
csrc/qwen_rms_scale_swiglu/plugin/: qwenRmsScaleSwigluPlugin.cpp  qwenRmsScaleSwigluPlugin.h
data/: assignment_prompts.jsonl  assignment_scenarios.json  quality_prompts.jsonl
docs/: consistent_pipeline_checklist.md  debug_engine_backend_argument.md  debug_engine_config_overwrite.md  debug_trtllm_engine_serving.md  debug_trtllm_nvfp4_checkpoints.md  dual_plugin_nvfp4_workflow.md  engine_benchmark_target_fix.md  experiment_plan.md  fusion_modes_and_comparison.md  model_selection.md  next_steps_after_smoke_test.md  nvfp4_contract_and_next_steps.md  nvfp4_understanding_and_step_plan.md  sharded_folding.md  stage6_folded_nvfp4_base_vs_plugin_benchmark.md  stage6_nvfp4_three_way_benchmark.md  stage7_nvfp4_output_quality_check.md  tp_size_compatibility.md  trtllm_checkpoint_vs_engine.md  trtllm_nvfp4_quantization.md  trtllm_nvfp4_quantization_and_cleanup.md  vast_ai_notes.md  vast_trtllm_benchmark_integration.md
patches/: apply_trtllm_patches.sh  restore_trtllm_originals.sh
scripts/: 00_setup_env.sh  00b_download_small_checkpoint.sh  01_verify_folding.sh  02_fold_checkpoint.sh  05_summarize_metrics.sh  (+64 more)
(+23 files in other folders)
